Working towards Cuda class call

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 cuda_add_executable(cuda_example cuda_main.cu )
-cuda_add_library(modellib Model.cpp helpers.cu)
+cuda_add_library(modellib helpers.cu)
 target_link_libraries(cuda_example modellib)
