Working CUDA class call

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(catch catch.cpp)
+cuda_add_executable(catch catch.cu)
 cuda_add_executable(catch_cuda catch_cuda.cu)
 target_link_libraries(catch modellib)
 target_link_libraries(catch_cuda modellib)
