--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 project(MPI_Scaffold)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 find_package(CUDA)
-set(CUDA_NVCC_FLAGS -arch sm_35)
+
+list(APPEND CUDA_NVCC_FLAGS -arch sm_35;-std=c++11;--expt-extended-lambda)
 include_directories(src)
 include_directories(lib)
 
