--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(mpi_example parallel_main.cpp )
+add_executable(omp_example parallel_main.cpp )
 add_library(modellib Model.cpp)
-target_link_libraries(mpi_example modellib  ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
+target_link_libraries(omp_example modellib)
