Locally working OMP harness

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,3 +2,5 @@ add_executable(catch catch.cpp)
 add_executable(catch_omp catch_omp.cpp)
 target_link_libraries(catch modellib)
 target_link_libraries(catch_omp modellib)
+target_compile_features(catch PRIVATE cxx_nullptr)
+target_compile_features(catch_omp PRIVATE cxx_nullptr)
