Start to move FPGA harness into slightly nicer C++

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
-cuda_add_executable(cuda_example cuda_main.cu )
-cuda_add_library(modellib helpers.cu)
-target_link_libraries(cuda_example modellib)
+add_executable (cl_main cl_main.cpp)
+add_library (cl_build build.cpp)
+
+configure_file(kernel.cl kernel.cl COPYONLY)
+configure_file(Model.cl Model.cl COPYONLY)
+target_link_libraries(cl_main cl_build ${OpenCL_LIBRARY})
