--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,6 @@ add_library (cl_build build.cpp)
 
 configure_file(kernel.cl kernel.cl COPYONLY)
 configure_file(Model.cl Model.cl COPYONLY)
+configure_file(Model.h Model.h COPYONLY)
+
 target_link_libraries(cl_main cl_build ${OpenCL_LIBRARY})
